k8s_deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: movie-api
  template:
    metadata:
      labels:
        app: movie-api
    spec:
      containers:
        - name: movie-api
          image: <docker_registry>/movie-api
          ports:
            - containerPort: 5000
