k8s_deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-api
spec:
  type: LoadBalancer
  ports:
    - port: 80
        targetPort: 5000
  selector:
    app: movie-api
